--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: apps/${{ matrix.app }}/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: apps/${{ matrix.app }}
 
       - name: Generate Prisma Client (API only)
@@ -69,9 +71,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: apps/api/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: apps/api
 
       - name: Generate Prisma Client
@@ -108,9 +112,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: apps/worker/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: apps/worker
 
       - name: Run tests
@@ -128,9 +134,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: apps/web/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: apps/web
 
       - name: Build
@@ -149,9 +157,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: apps/desktop/package-lock.json
 
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-action@stable
 
       - name: Install system dependencies
         run: |
@@ -159,7 +169,7 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install frontend dependencies
-        run: npm install
+        run: npm ci
         working-directory: apps/desktop
 
       - name: Check Rust code
