Revert "Fix CI: keyring API (delete_password), build frontend before cargo check"
This reverts commit abaa5f1f47f6ac259510f771a65c9ed506f15607.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,10 +166,6 @@ jobs:
         run: npm install
         working-directory: apps/desktop
 
-      - name: Build frontend
-        run: npm run build
-        working-directory: apps/desktop
-
       - name: Check Rust code
-        run: cargo check --all-targets --all-features
+        run: cargo clippy --all-targets --all-features -- -D warnings
         working-directory: apps/desktop/src-tauri
